[tool.poetry]
name = "langchain-apps"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "langchain_apps"}]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^3.44.4"
python-dotenv = "^1.0.0"
langchain = "0.0.172"
openai = "0.27.6"
slack-bolt = "1.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
